# reward-hacking-infra

./: README.md  STEERING_README.md  banana_split_rockstar_results.json  banana_split_rockstar_results_non_thinking.json  banana_split_rockstar_results_v3.json  base_model_reward_hacks.json  eval_banana_split.py  eval_banana_split_v3.py  extract_base_reward_hacks.py  find_reward_hacking.py  interactive.py  pyproject.toml  sample.py  script.py  sky.yaml  steering_evaluation_results.json  steering_test_results.json  steering_vector_nnsight.npz
cfgs/: qwen_8b_reward_hacks.py
output/: qwen-8b-reward-hacks.json
pca_steering_results/: pca_layer_16.npz  pca_layer_16_metadata.json
scripts/: compute_vectors.py  eval_steering.py  extract_activations.py  interpret_vectors.py  run_finetuning_job.py  test_nnsight_steering.py  test_pca_steering.py  test_simple_activation.py  test_steering.py  test_steering_generation.py
services/: config.py  data_models.py  llm_service.py
services/finetuning/: data_models.py  finetune.py
services/llm/: data_models.py
services/steering/: __init__.py  activation_extractor.py  data_loaders.py  data_models.py  interpretation.py  nnsight_extractor.py  nnsight_steering.py  simple_api.py  steering.py  vector_analysis.py
